--- a/frontend/HTML/index.html
+++ b/frontend/HTML/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/CSS/style.css">
 </head>
 <body>
+ <header>
   <div class="header">
        <img src="https://iq2u.ru/university_images/avatar/2015/02/13/16/55/54de025b62063.png" alt="logo"> 
        <h1>Система анализа категорий интересов студентов МГТУ&nbsp;им.&nbsp;Н.Э.&nbsp;Баумана по&nbsp;их&nbsp;успеваемости.</h1>
@@ -20,7 +21,7 @@
        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/1243/1243926.png?w=740"  alt="menu-icon" >  </a>
  <div class="menu">
        <h2>МЕНЮ</h2>
-        <a href="index.html">Главная страница
+        <a href="index.html">Главная страница 
     </a><br>
         <a href="student_analysis.html">Аналитика интересов по&nbsp;успеваемости
     </a><br>
@@ -31,6 +32,10 @@
     </div>
     
 </div>
+
+</header>
+
+<main>
 
 <h3>О проекте</h3>
 <p style="width: 90%"  >
@@ -54,6 +59,10 @@
 
   </p>
    
+</main> 
+
+<footer>
     
+</footer>
 </body>
 </html>
