--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -27,7 +27,7 @@
     </a><br>
         <a href="subscribe_analysis.html">Аналитика успеваемости подписчиков сообщества
             </a><br>
-        <a href="documentation.html">Документация проекта
+        <a href="/swagger/">Документация проекта
            </a>
     </div>
     
