--- a/frontend/html/subscribe_analysis.html
+++ b/frontend/html/subscribe_analysis.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Аналитика успеваемости подписчиков сообщества</title>
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 <body>
