--- a/frontend/html/student_analysis.html
+++ b/frontend/html/student_analysis.html
@@ -128,24 +128,7 @@
                             labels: labels,
                             datasets: [{
                                 label: 'Количество подписчиков',
-                                data: data_chart,
-                                backgroundColor: [
-                                    'rgba(216, 27, 96, 0.6)',
-                                    'rgba(3, 169, 244, 0.6)',
-                                    'rgba(255, 152, 0, 0.6)',
-                                    'rgba(29, 233, 182, 0.6)',
-                                    'rgba(156, 39, 176, 0.6)',
-                                    'rgba(84, 110, 122, 0.6)'
-                                ],
-                                borderColor: [
-                                    'rgba(216, 27, 96, 1)',
-                                    'rgba(3, 169, 244, 1)',
-                                    'rgba(255, 152, 0, 1)',
-                                    'rgba(29, 233, 182, 1)',
-                                    'rgba(156, 39, 176, 1)',
-                                    'rgba(84, 110, 122, 1)'
-                                ],
-                                borderWidth: 1
+                                data: data_chart
                             }]
                         },
                         options: {
@@ -159,13 +142,6 @@
                                 fontSize: 16,
                                 padding: 20
                             },
-                            scales: {
-                                yAxes: [{
-                                    ticks: {
-                                        min: 75
-                                    }
-                                }]
-                            }
                         }
                     })
                 }
