--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Главная страница</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
  <header>
@@ -39,7 +39,7 @@
 <h3>О проекте</h3>
 <p style="width: 90%"  >
 
-Проект подготовлен студентами МГТУ им.&nbsp;Н.Э.&nbsp;Баумана в&nbsp;рамках выполнения домашней работы по&nbsp;курсу &laquo;Интернет-технологии&raquo; на&nbsp;основании утвержденного плана университета. <br>
+Проект подготовлен студентами МГТУ им.&nbsp;Н.Э.&nbsp;Баумана в&nbsp;рамках выполнения проектной работы по&nbsp;курсу &laquo;Интернет-технологии&raquo; на&nbsp;основании утвержденного плана университета. <br>
 Мы&nbsp;предоставляем доступ к&nbsp;системе, которая автоматизирует процесс анализа интересов учащихся. Пользователи системы получают данные об&nbsp;интересах студентов, основанных на&nbsp;категориях подписок на&nbsp;сообщества сети ВКонтакте.
 </p>
    <br>
