--- a/frontend/html/student_analysis.html
+++ b/frontend/html/student_analysis.html
@@ -72,7 +72,8 @@
         Результаты анализа:  <br>
 
         <canvas id="bar-chart-categories"  ></canvas>
-        
+        <div id="result-error-stud">  </div>
+
 <br>
 
     </div>
