--- a/frontend/html/subscribe_analysis.html
+++ b/frontend/html/subscribe_analysis.html
@@ -70,7 +70,7 @@
      
         <canvas id="bar-chart-student"  ></canvas>
         <canvas id="sector-chart-categories"  ></canvas>
-<div id="result ">  </div>
+<div id="result-error">  </div>
              
         <br> <br>
      </div>
