New page for documantation

--- a/frontend/html/student_analysis.html
+++ b/frontend/html/student_analysis.html
@@ -27,7 +27,7 @@
             </a><br>
             <a href="subscribe_analysis.html">Аналитика успеваемости подписчиков сообщества
             </a><br>
-            <a href="/swagger/">Документация проекта
+            <a href="/swagger/" target="_blank">Документация проекта
             </a>
         </div>
     </div>
