--- a/frontend/html/subscribe_analysis.html
+++ b/frontend/html/subscribe_analysis.html
@@ -26,7 +26,7 @@
             </a><br>
                 <a href="subscribe_analysis.html">Аналитика успеваемости подписчиков сообщества
                     </a><br>
-                <a href="/swagger/">Документация проекта
+                <a href="/swagger/" target="_blank">Документация проекта
                    </a>
             </div>
         </div>
