--- a/frontend/html/student_analysis.html
+++ b/frontend/html/student_analysis.html
@@ -38,7 +38,7 @@
     <style> 
         #result-student-analyse {
             width: 90%;
-            margin: 0;
+            margin: auto;
         }
         #bar-chart-categories{
             width: 70%;
@@ -69,10 +69,10 @@
     <br>
 
     <div class=result-back id='result-student-analyse' style="height: auto;">
-        Результаты анализа:  <br>
+        Результаты анализа:  <br> <br><br><br><br>
+        <div id="result-error-stud" >  </div>
 
         <canvas id="bar-chart-categories"  ></canvas>
-        <div id="result-error-stud">  </div>
 
 <br>
 
