--- a/frontend/html/subscribe_analysis.html
+++ b/frontend/html/subscribe_analysis.html
@@ -64,13 +64,13 @@
      <br>
      <br>
 
-      <div  class=result-back style="height: auto;">
+      <div  class=result-back style="height: auto; margin: auto;">
     Результаты анализа:  <br>
+<br><br><br>
+     <div id="result-error" >  </div>
 
-     
         <canvas id="bar-chart-student"  ></canvas>
         <canvas id="sector-chart-categories"  ></canvas>
-<div id="result-error">  </div>
              
         <br> <br>
      </div>
