--- a/frontend/html/404page.html
+++ b/frontend/html/404page.html
@@ -36,9 +36,14 @@
 
 <main style="margin: auto;">
 
-<div  style="padding-top: 100px;">
-<h2 style="text-align: center;">Упс... Ничего не нашлось</h2>
+<div  style="padding-top: 100px; margin: auto;  ">
+<h2 style="text-align: center;">Упс... Ничего не нашлось</h2> <br><br><br>
+           <center>
+            <img src="https://cdn-icons-png.flaticon.com/512/4826/4826312.png" alt="404error" width="200" > 
+</center>
    </div>
+   
+
 
    
 </main> 
