--- a/frontend/html/subscribe_analysis.html
+++ b/frontend/html/subscribe_analysis.html
@@ -64,7 +64,7 @@
      <br>
      <br>
 
-      <div  class=result-back style="height: auto; margin: auto;">
+      <div  class=result-back>
     Результаты анализа:  <br>
 <br><br><br>
      <div id="result-error" >  </div>
